Mon May 30 18:44:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACEXML/examples/SAXPrint/main.cpp:
          Fixed gcc 4.6 warning

        * docs/bczar/bczar.html:
          Added some more packages

Fri May 27 14:44:01 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_2653_Regression_Test.cpp:
        * tests/Compiler_Features_12_Test.cpp:
        * tests/Reference_Counted_Event_Handler_Test.cpp:
          Resolved gcc 4.6 warning: variable was set but not used.

Fri May 27 09:49:56 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ace/Monitor_Control/Linux_Network_Interface_Monitor.cpp:
          Made changes to satisfy Coverity and the GNU 4.6 gcc compiler.
          fgets returns a void*. This is stored in dummy. We use
          ACE_UNUSED_ARG to fool the 4.6 gcc compiler.

Thu May 26 14:27:50 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ace/Monitor_Control/Linux_Network_Interface_Monitor.cpp:
          Resolved gcc 4.6 warning: variable was set but not used.

Thu May 26 14:11:57 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ace/Monitor_Control/Linux_Network_Interface_Monitor.cpp:
          Resolved gcc 4.6 warning: variable was set but not used.

Thu May 26 11:39:54 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added a yum install with all packages you could need on FC

Thu May 26 13:09:50 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Compiler_Features_10_Test.cpp:
          Resolved coverity warnings.

Mon May 23 07:55:41 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/QtReactor_Test.h:
        * tests/QtReactor_Test.cpp:
        Changed deprecated qt4 functions and includes.

Mon May 23 07:10:41 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Naming/Name_Binding.h:
        * netsvcs/lib/Client_Logging_Handler.cpp:
          Fixed incorrect delete
