@@ -1,3 +1,8 @@
+Tue May 31 07:13:01 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * ACEXML/examples/SAXPrint/main.cpp:
+          Fixed compile error.
+
 Mon May 30 18:44:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ACEXML/examples/SAXPrint/main.cpp:
